--- a/.github/workflows/archive.yml
+++ b/.github/workflows/archive.yml
@@ -19,6 +19,8 @@ jobs:
     steps:
     - name: "Checkout"
       uses: actions/checkout@v2
+      with:
+        submodules: true
 
     # Note: No caching for this build!
 
