--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -12,6 +12,8 @@ jobs:
     steps:
     - name: "Checkout"
       uses: actions/checkout@v3
+      with:
+        submodules: true
 
     # See https://github.com/actions/checkout/issues/290
     - name: "Get Tag Annotations"
