--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -25,6 +25,8 @@ jobs:
     steps:
     - name: "Checkout"
       uses: actions/checkout@v2
+      with:
+        submodules: true
 
     - name: "Update Generated Files"
       uses: martinthomson/i-d-template@v1
